# playlist-sync

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
linux_scripts/: playlist-sync_init.sh
playlist_sync/: __main__.py  config.py  deemix_config.py  playlist.py
windows_scripts/: playlist-sync_init.cmd  playlist-sync_sync.cmd  playlist-sync_sync.sh
