[metadata]
name = playlist-sync
version = 0.1.0
author = Lilian Mallardeau
author_email = lilianmallardeau@gmail.com
description = A little command line tool to download and sync playlists from Deezer or Spotify to predefined folders.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lilianmallardeau/playlist-sync
project_urls =
    Bug Tracker = https://github.com/lilianmallardeau/playlist-sync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = playlist_sync
python_requires = >=3.8
install_requires =
    click==8.0.4
    deemix==3.6.6
    spotipy==2.19.0

[options.entry_points]
console_scripts =
    playlist-sync = playlist_sync.__main__:cli
